[Suraj] : Refactor alert-service - add validation layer, event handling, and mapper support